[gd_scene load_steps=40 format=3 uid="uid://dweoi177bcxdt"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_mf6rs"]
[ext_resource type="Texture2D" uid="uid://bnkio2i8yo5gf" path="res://sprites/Prototype_Worksheet.png" id="2_koaf0"]
[ext_resource type="Texture2D" uid="uid://cpr2dnwvifk8n" path="res://sprites/Prototype_Worksheet (2).png" id="3_xvl2u"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7b6tj"]
atlas = ExtResource("2_koaf0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pujin"]
atlas = ExtResource("2_koaf0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_646fc"]
atlas = ExtResource("2_koaf0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qognu"]
atlas = ExtResource("2_koaf0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8iqr"]
atlas = ExtResource("2_koaf0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg4qw"]
atlas = ExtResource("2_koaf0")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_20oal"]
atlas = ExtResource("2_koaf0")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ch0i"]
atlas = ExtResource("2_koaf0")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_spdmc"]
atlas = ExtResource("2_koaf0")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0b3bl"]
atlas = ExtResource("3_xvl2u")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rq2k"]
atlas = ExtResource("3_xvl2u")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ed58s"]
atlas = ExtResource("3_xvl2u")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2p6s8"]
atlas = ExtResource("3_xvl2u")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6rsxa"]
atlas = ExtResource("3_xvl2u")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4pi7"]
atlas = ExtResource("3_xvl2u")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sy1aw"]
atlas = ExtResource("3_xvl2u")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwv37"]
atlas = ExtResource("3_xvl2u")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1la2y"]
atlas = ExtResource("2_koaf0")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8uw2"]
atlas = ExtResource("2_koaf0")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7p8p"]
atlas = ExtResource("2_koaf0")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_68jic"]
atlas = ExtResource("2_koaf0")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_521i5"]
atlas = ExtResource("2_koaf0")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8tsok"]
atlas = ExtResource("2_koaf0")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rik82"]
atlas = ExtResource("2_koaf0")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gka6h"]
atlas = ExtResource("2_koaf0")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35kn7"]
atlas = ExtResource("2_koaf0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qel57"]
atlas = ExtResource("2_koaf0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_augk8"]
atlas = ExtResource("2_koaf0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxm85"]
atlas = ExtResource("2_koaf0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tiyks"]
atlas = ExtResource("2_koaf0")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk11t"]
atlas = ExtResource("2_koaf0")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gj4ns"]
atlas = ExtResource("2_koaf0")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6wbyp"]
atlas = ExtResource("2_koaf0")
region = Rect2(96, 160, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_rn5hp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7b6tj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pujin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_646fc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qognu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8iqr")
}],
"loop": true,
"name": &"frontidle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg4qw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_20oal")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ch0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_spdmc")
}],
"loop": true,
"name": &"frontwalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0b3bl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rq2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ed58s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2p6s8")
}],
"loop": true,
"name": &"leftidle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6rsxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4pi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sy1aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwv37")
}],
"loop": true,
"name": &"leftwalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1la2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8uw2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7p8p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_68jic")
}],
"loop": true,
"name": &"rightidle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_521i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8tsok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rik82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gka6h")
}],
"loop": true,
"name": &"rightwalk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35kn7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qel57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_augk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxm85")
}],
"loop": true,
"name": &"upidle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tiyks")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk11t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gj4ns")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6wbyp")
}],
"loop": true,
"name": &"upwalk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3wbsu"]
size = Vector2(12, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_6cijw"]
radius = 13.0

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource("1_mf6rs")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_rn5hp")
animation = &"frontidle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3wbsu")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="PlayerHitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4

[node name="PlayerHitbox" type="CollisionShape2D" parent="PlayerHitbox"]
shape = SubResource("CircleShape2D_6cijw")

[node name="attackCooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="PlayerHitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="PlayerHitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="attackCooldown" to="." method="_on_attack_cooldown_timeout"]
